Fixed the issues with the visited links and nav bar in IE
Both issues seem (to me) to be bugs in the browsers. The invisible visited links are white on white, but the white color should be only in the nav links, not in body. And the picture was sized correctly, and then enlarged when made a hyperlink, but only in IE. Ready to go live now.

--- a/main.css
+++ b/main.css
@@ -102,6 +102,7 @@ nav a:hover, a:active {
 	color: #fff;
 	background: hsla(113, 67%, 100%, .15);
 }
+
 nav img {
 	height: 90;
 	float: left;
@@ -116,6 +117,11 @@ section {
 section.biog{
 	border-bottom:1px solid  hsl(113, 67%, 40%);
 }
+
+section a:link, {color: blue}
+section a:visited {color: purple}
+section a:hover  {color: blue}
+section a:active {color: blue}
 
 article {
 	width: 500px;
